--- a/css/styles.css
+++ b/css/styles.css
@@ -3507,7 +3507,7 @@ footer .soc a:hover img {
   min-height: 99px; }
 
 .page-default .is-sticky .top-line {
-  padding-top: 1px !important; }
+  padding-top: 14px !important; }
 
 .page-default header .top-menu > ul {
   position: relative;
@@ -4155,5 +4155,549 @@ header .top-menu > ul > li + li {
       border: 2px solid #FF7900; }
 
 /*-----------------------END-PAGE-EVENTS------------------------*/
+/*------------------------PAGE-OLD-EVENTS------------------------*/
+.old-event .select-wrap ul li a {
+  border-color: #505A14;
+  background: #FEF7F3; }
+.old-event .select-wrap ul .is-active a {
+  background: #505A14;
+  color: #fff; }
+.old-event .select-wrap ul li a:hover {
+  border-color: #505A14;
+  background: #FEF7F3; }
+.old-event .tab-item .item {
+  background: #E4E9C7; }
+.old-event .btn-wrap .link-wrap {
+  margin: 0; }
+.old-event .tab-item .item .text ul li {
+  border: 1px solid  #505A14;
+  background: #FEF7F3; }
+
+/*-----------------------END-PAGE-OLD-EVENTS------------------------*/
+/*------------------------PAGE-OLD-EVENT-INNER------------------------*/
+.old-event-inner {
+  padding-bottom: 28px !important; }
+  .old-event-inner .alignleft {
+    float: left;
+    width: 560px;
+    margin: 0 40px 40px 0;
+    height: auto;
+    border-radius: 10px; }
+  .old-event-inner p {
+    margin-bottom: 50px; }
+  .old-event-inner .teg {
+    margin-bottom: 16px; }
+    .old-event-inner .teg p {
+      font-size: 18px;
+      margin-bottom: 0; }
+  .old-event-inner .loc {
+    position: relative;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .old-event-inner .loc img {
+      position: relative;
+      margin-right: 12px; }
+  .old-event-inner .info {
+    padding-left: 600px;
+    margin-bottom: 41px; }
+    .old-event-inner .info li {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content;
+      border-radius: 90px;
+      border: 1px solid #505A14;
+      background: #fff;
+      padding: 0 20px;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 36px;
+      margin: 0 12px 12px 0; }
+
+.marquee-wrap .marquee .item p {
+  white-space: nowrap; }
+
+body .auto-slider-mini {
+  padding-top: 80px; }
+  body .auto-slider-mini .h3 {
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 106%;
+    text-align: center;
+    margin: 0 0 40px; }
+  body .auto-slider-mini .slider-wrap {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 73px; }
+  body .auto-slider-mini .nav-wrap {
+    display: none; }
+  body .auto-slider-mini .swiper-slide {
+    height: 520px; }
+
+/*-----------------------END-PAGE-OLD-EVENT-INNER------------------------*/
+/*------------------------PAGE-EVENT-INNER------------------------*/
+.event-inner {
+  padding-bottom: 60px !important; }
+  .event-inner .content-columns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .event-inner .content-columns figure {
+      width: calc(50% - 20px); }
+      .event-inner .content-columns figure img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px; }
+    .event-inner .content-columns .text {
+      width: calc(50% - 20px); }
+      .event-inner .content-columns .text p {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%; }
+      .event-inner .content-columns .text .teg {
+        margin-bottom: 16px; }
+        .event-inner .content-columns .text .teg p {
+          font-size: 18px;
+          margin-bottom: 0; }
+      .event-inner .content-columns .text .loc {
+        position: relative;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        margin-bottom: 15px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .event-inner .content-columns .text .loc img {
+          position: relative;
+          margin-right: 12px; }
+      .event-inner .content-columns .text .info-event {
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content;
+        border-radius: 10px;
+        border: 1px solid #FF7900;
+        background: #FEF7F3;
+        padding: 7px 20px;
+        margin-bottom: 12px; }
+        .event-inner .content-columns .text .info-event p {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 150%; }
+          .event-inner .content-columns .text .info-event p b {
+            font-weight: 700; }
+        .event-inner .content-columns .text .info-event p + p {
+          margin-top: 0; }
+      .event-inner .content-columns .text .cost {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        margin-bottom: 5px; }
+        .event-inner .content-columns .text .cost li {
+          margin: 0 12px 12px 0;
+          border-radius: 90px;
+          border: 1px solid  #FF7900;
+          background: #FEF7F3;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 36px;
+          padding: 0 20px; }
+    .event-inner .content-columns .text-col-2 {
+      width: 100%;
+      margin-top: 40px;
+      -webkit-column-count: 2;
+              column-count: 2;
+      gap: 40px; }
+      .event-inner .content-columns .text-col-2 p {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        margin-bottom: 20px; }
+    .event-inner .content-columns .btn-wrap {
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin-top: 35px; }
+  .event-inner .btn-wrap-mob {
+    display: none; }
+
+.auto-slider-mini .text {
+  -webkit-column-count: 2;
+          column-count: 2;
+  gap: 40px;
+  padding: 0 12px;
+  margin-bottom: 40px; }
+  .auto-slider-mini .text ul {
+    margin-bottom: 25px; }
+    .auto-slider-mini .text ul li {
+      padding-left: 15px;
+      position: relative;
+      margin-bottom: 0; }
+      .auto-slider-mini .text ul li:before {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        content: '';
+        width: 3px;
+        height: 3px;
+        background: #000;
+        border-radius: 100%; }
+  .auto-slider-mini .text p {
+    margin-bottom: 25px; }
+  .auto-slider-mini .text p:last-child {
+    margin-bottom: 0; }
+.auto-slider-mini .btn-wrap {
+  width: 100%;
+  margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.img-text {
+  padding: 50px 0 50px; }
+  .img-text .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 40px; }
+    .img-text .item figure {
+      width: calc(50% - 20px);
+      height: 360px; }
+      .img-text .item figure img {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+           object-fit: cover;
+        -o-object-position: center;
+           object-position: center;
+        border-radius: 10px; }
+    .img-text .item .text {
+      border-radius: 10px;
+      background: #F9E5D7;
+      padding: 20px 59px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      width: calc(50% - 20px); }
+      .img-text .item .text p {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        margin-bottom: 20px; }
+      .img-text .item .text p:last-child {
+        margin-bottom: 0; }
+      .img-text .item .text .sub-title {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 112%;
+        margin-bottom: 15px; }
+        .img-text .item .text .sub-title img {
+          margin-right: 10px; }
+  .img-text .item:nth-child(2n) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse; }
+  .img-text .item:last-child {
+    margin-bottom: 0; }
+
+.auto-slider-mini + .img-text {
+  margin-top: -70px; }
+
+.cost-block {
+  padding: 31px 0 50px; }
+  .cost-block .content-full {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .cost-block .text {
+    width: calc(50% - 20px); }
+    .cost-block .text p {
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      margin-bottom: 33px; }
+      .cost-block .text p b {
+        font-weight: 700; }
+    .cost-block .text p:last-child {
+      margin-bottom: 0; }
+    .cost-block .text .title {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 112%;
+      margin-bottom: 20px; }
+      .cost-block .text .title img {
+        margin-right: 10px; }
+  .cost-block .border-block {
+    width: calc(50% - 20px);
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    position: relative;
+    padding: 28px 42px 50px 26px;
+    background: #F9E5D7;
+    border-radius: 10px; }
+    .cost-block .border-block .content {
+      position: relative; }
+      .cost-block .border-block .content .wrap {
+        position: relative;
+        z-index: 5;
+        padding: 36px 33px 0;
+        background: #fff;
+        border: 1px solid #B1B1B1;
+        border-bottom: 0; }
+      .cost-block .border-block .content:before {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 100%;
+        height: calc(100% + 65px);
+        content: '';
+        z-index: 2;
+        background: #E0E0E0; }
+      .cost-block .border-block .content:after {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        width: 100%;
+        height: calc(100% + 65px);
+        content: '';
+        z-index: 3;
+        background: #ebebeb; }
+    .cost-block .border-block .before {
+      position: absolute;
+      top: -33px;
+      right: 33px;
+      z-index: 10; }
+    .cost-block .border-block .after {
+      position: relative;
+      z-index: 11;
+      height: 65px; }
+      .cost-block .border-block .after img {
+        position: absolute;
+        bottom: 0;
+        right: -8px;
+        z-index: 20; }
+      .cost-block .border-block .after:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 64px;
+        width: calc(100% - 103px);
+        background: #fff;
+        display: block;
+        border-left: 1px solid #B1B1B1;
+        border-bottom: 1px solid #B1B1B1;
+        content: ''; }
+      .cost-block .border-block .after:after {
+        position: absolute;
+        top: 0;
+        left: 20px;
+        height: 30px;
+        width: calc(100% - 80px);
+        background: #fff;
+        display: block;
+        content: ''; }
+    .cost-block .border-block .sub-title-1 {
+      color: #FF7900;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 150%;
+      margin-bottom: 6px; }
+    .cost-block .border-block .sub-title-2 {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      color: #505A14;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 150%;
+      margin-bottom: 12px; }
+      .cost-block .border-block .sub-title-2 img {
+        margin-right: 10px; }
+    .cost-block .border-block ol {
+      margin: 0 0 18px;
+      padding-left: 21px; }
+    .cost-block .border-block ol:last-child {
+      margin-bottom: 0; }
+
+.requirements {
+  padding: 33px 0 120px; }
+  .requirements .title {
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 112%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 26px; }
+    .requirements .title img {
+      margin-right: 10px; }
+  .requirements ol {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-height: 300px;
+    margin: 0;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    list-style: none;
+    padding: 0; }
+    .requirements ol li {
+      width: 50%;
+      margin-bottom: 23px;
+      padding-right: 20px;
+      position: relative;
+      padding-left: 43px;
+      counter-increment: li; }
+      .requirements ol li:before {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        -webkit-transform: translate(0, -50%);
+                transform: translate(0, -50%);
+        content: counter(li);
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        width: 32px;
+        height: 32px;
+        border: 2px solid #000;
+        border-radius: 100%;
+        font-size: 20px;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        font-weight: 700; }
+      .requirements ol li p {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%; }
+        .requirements ol li p b {
+          font-weight: 700; }
+      .requirements ol li li:last-child {
+        margin-bottom: 0; }
+    .requirements ol li:nth-child(4), .requirements ol li:nth-child(5), .requirements ol li:nth-child(6) {
+      padding: 0 0 0 43px;
+      margin-left: 20px; }
+  .requirements .btn-wrap {
+    width: 100%;
+    margin-top: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .requirements .btn-wrap a + a {
+      margin-left: 40px; }
+  .requirements .info-center {
+    margin-top: 41px; }
+    .requirements .info-center p {
+      text-align: center;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%; }
+      .requirements .info-center p a {
+        font-weight: 700;
+        -webkit-text-decoration-line: underline;
+                text-decoration-line: underline;
+        color: #FF7900; }
+        .requirements .info-center p a:hover {
+          color: #787878; }
+
+.btn-green {
+  background: #505a14;
+  border-color: #505a14; }
+  .btn-green:hover {
+    background: #2B3D24;
+    border-color: #2B3D24; }
+
+/*-----------------------END-PAGE-EVENT-INNER------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
